@@ -1,3 +1,6 @@
+2005-08-15 TADA Tadashi <sho@spc.gr.jp>
+	* theme/base.css: add calendar2.rb plugin's default image settings.
+
 2005-08-15 akira yamada <akira at arika.org>
 	* filter/spam.rb, plugin/10spamfilter.rb: add dispose mode, more check mail
 	address and date limitation.
